Bug #HILL-1335, device protocol alignment in mobile

--- a/app/styles/_mobile-media-query.scss
+++ b/app/styles/_mobile-media-query.scss
@@ -1,3 +1,4 @@
+
 @media only screen and (min-width : 320px) and (max-width : 700px) {
 
 	.content-body {
@@ -222,6 +223,19 @@
 	}
 	.pull-left-mob{
 		float:left;
+	}
+	.protocol_heading_color{
+		span{
+		color:#7ca3dc !important;
+		}
+	}
+	.dashboard__manage-view--header{
+		border:none;
+		padding:0;
+		.header--type{
+			font-size:14px;
+		}
+	
 	}
 	.hcp_ellipses{
 		text-overflow: ellipsis;
